# nexus-router

./: .gitignore  ADAPTER_SPEC.md  CHANGELOG.md  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml
nexus_router/: __init__.py  dispatch.py  docs.py  event_store.py  exceptions.py  export.py  import_.py  inspect.py  plugins.py  policy.py  provenance.py  replay.py  router.py  schema.py  tool.py
nexus_router/schemas/: nexus-router.inspect.request.v0.2.json  nexus-router.inspect.response.v0.2.json  nexus-router.replay.request.v0.2.json  nexus-router.replay.response.v0.2.json
scripts/: check_generated_docs.py  export_adapter_template.py
site/: astro.config.mjs
site/src/: site-config.ts
templates/adapter-template/: pyproject.toml
templates/adapter-template/.github/workflows/: adapter-ci.yml
templates/adapter-template/src/nexus_router_adapter_example/: __init__.py
templates/adapter-template/tests/: test_adapter.py
tests/: test_adapter_registry.py  test_apply_allowed.py  test_apply_policy_gate.py  test_declarative_selection.py  test_docs.py  test_export_import.py  test_inspect.py  test_max_steps_enforced.py  test_phase3_wave1.py  test_phase3_wave2.py  test_phase3_wave3.py  test_phase4_wave1.py  test_phase4_wave2.py  test_phase4_wave3.py  test_plugins.py  test_replay.py  test_router_registry.py  test_schema_contract.py  test_schema_validation.py  test_subprocess_adapter.py  test_validate_adapter.py
tests/fixtures/: echo_tool.py
tests/fixtures/toy_adapter_pkg/: __init__.py
