[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-router"
version = "0.1.1"
description = "Event-sourced MCP router with provenance + integrity"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["jsonschema>=4.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5.0", "mypy>=1.8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_router*"]

[tool.setuptools.package-data]
nexus_router = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
