[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-router"
version = "1.1.1"
description = "Event-sourced MCP router with provenance + integrity"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "mcp",
    "router",
    "event-sourcing",
    "provenance",
    "integrity",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["jsonschema>=4.0.0"]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/nexus-router"
Repository = "https://github.com/mcp-tool-shop-org/nexus-router"
Issues = "https://github.com/mcp-tool-shop-org/nexus-router/issues"
Changelog = "https://github.com/mcp-tool-shop-org/nexus-router/releases"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4.0", "ruff>=0.5.0", "mypy>=1.8.0", "pip-audit>=2.7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_router*"]

[tool.setuptools.package-data]
nexus_router = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
